[gd_scene load_steps=27 format=3 uid="uid://bj53m0le6fixn"]

[ext_resource type="Script" uid="uid://buv3isgiyuqcm" path="res://Scripts/Enemies/ArcaneArcher/arcane_archer.gd" id="1_sqpd4"]
[ext_resource type="Script" uid="uid://bpk851cryqf1f" path="res://Scripts/States/State Control.gd" id="3_dk7ir"]
[ext_resource type="Shader" uid="uid://du5s436ct6q2q" path="res://Assets/Effects/on_hit_flash.gdshader" id="3_dsqkb"]
[ext_resource type="Texture2D" uid="uid://j3xverou5twt" path="res://Assets/Enemies/ENEMY_archer.png" id="3_xkaj8"]
[ext_resource type="Script" uid="uid://dplmy4wbp01qs" path="res://Scripts/States/EnemyIdle.gd" id="4_dksyp"]
[ext_resource type="Script" uid="uid://blh07mgm8ix5j" path="res://Scripts/Enemies/ArcaneArcher/EnemyChaseArcaneArcher.gd" id="5_uw5cu"]
[ext_resource type="Script" uid="uid://ceme8hxwc2vr" path="res://Scripts/Enemies/ArcaneArcher/EnemyAttackArcaneArcher.gd" id="6_qgvvr"]
[ext_resource type="PackedScene" uid="uid://bcvjqylald7g8" path="res://Scenes/Projectiles/arcane_arrow.tscn" id="7_0t3rh"]
[ext_resource type="Script" uid="uid://ddk5n0w8658gd" path="res://Scripts/Hurtboxes/Hurtbox.gd" id="9_k7gki"]
[ext_resource type="AudioStream" uid="uid://bihw5plpyvxx6" path="res://Assets/Sounds/Enemies/Slime/353250__zuzek06__slimejump.wav" id="11_fwn7j"]
[ext_resource type="AudioStream" uid="uid://clf1npumucsf3" path="res://Assets/Sounds/Enemies/478271__joao_janz__8-bit-explosion-1_4.wav" id="11_gng2b"]
[ext_resource type="AudioStream" uid="uid://dmggj3bb1d1jy" path="res://Assets/Sounds/Enemies/Slime/524952__magnuswaker__squelch-2.wav" id="12_ynpjb"]
[ext_resource type="AudioStream" uid="uid://2abbl0ptiwav" path="res://Assets/Sounds/Enemies/Archer/whoosh_weapon_knife_swing_04.wav" id="13_87241"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_iu8kf"]
resource_local_to_scene = true
shader = ExtResource("3_dsqkb")
shader_parameter/flash_color = Color(1, 0, 0, 1)
shader_parameter/flash_value = 0.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_pdttr"]
radius = 9.0
height = 22.8571

[sub_resource type="Animation" id="Animation_cheg3"]
resource_name = "Attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0), Vector2i(2, 0)]
}

[sub_resource type="Animation" id="Animation_a6n62"]
resource_name = "Death"
length = 0.85
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 1), Vector2i(1, 1), Vector2i(2, 1), Vector2i(3, 1), Vector2i(4, 1), Vector2i(5, 1), Vector2i(6, 1), Vector2i(7, 1), Vector2i(8, 1), Vector2i(9, 1), Vector2i(10, 1), Vector2i(11, 1), Vector2i(12, 1), Vector2i(13, 1), Vector2i(14, 1), Vector2i(15, 1), Vector2i(16, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_spb5g"]
resource_name = "Idle"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_jv2hr"]
resource_name = "OnHit"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:material:shader_parameter/flash_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [1.0, 0.5, 0.0]
}

[sub_resource type="Animation" id="Animation_c138m"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_b6ywu"]
resource_name = "Walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yixv0"]
_data = {
&"Attack": SubResource("Animation_cheg3"),
&"Death": SubResource("Animation_a6n62"),
&"Idle": SubResource("Animation_spb5g"),
&"OnHit": SubResource("Animation_jv2hr"),
&"RESET": SubResource("Animation_c138m"),
&"Walk": SubResource("Animation_b6ywu")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_to1xr"]
radius = 8.0
height = 22.8571

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_gm4ve"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("11_gng2b")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_d36xm"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("11_fwn7j")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_ht1mq"]
random_pitch = 1.2
random_volume_offset_db = 1.0
streams_count = 1
stream_0/stream = ExtResource("12_ynpjb")

[node name="Arcane_Archer" type="CharacterBody2D" groups=["Enemies"]]
scale = Vector2(0.7, 0.7)
collision_layer = 2
collision_mask = 7
motion_mode = 1
script = ExtResource("1_sqpd4")
HP = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_iu8kf")
position = Vector2(1.699, -15)
texture = ExtResource("3_xkaj8")
hframes = 17
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
show_behind_parent = true
position = Vector2(-4.03897e-28, -11.4286)
shape = SubResource("CapsuleShape2D_pdttr")

[node name="State Control" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_dk7ir")
initial_state = NodePath("EnemyIdle")

[node name="EnemyIdle" type="Node" parent="State Control" node_paths=PackedStringArray("enemy")]
script = ExtResource("4_dksyp")
enemy = NodePath("../..")

[node name="EnemyChase" type="Node" parent="State Control" node_paths=PackedStringArray("rayCast", "enemy", "navigation_agent")]
script = ExtResource("5_uw5cu")
rayCast = NodePath("../../RayCast2D")
enemy = NodePath("../..")
navigation_agent = NodePath("../../NavigationAgent2D")
attempt_attack_range = 100

[node name="EnemyAttack" type="Node" parent="State Control" node_paths=PackedStringArray("rayCast", "enemy")]
script = ExtResource("6_qgvvr")
projectile = ExtResource("7_0t3rh")
rayCast = NodePath("../../RayCast2D")
enemy = NodePath("../..")

[node name="attack_cooldown" type="Timer" parent="State Control/EnemyAttack"]
wait_time = 0.25
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_yixv0")
}

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(0, -10.46)
target_position = Vector2(300, 0)

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 256
collision_mask = 32
script = ExtResource("9_k7gki")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(-1.35525e-20, -11.4286)
shape = SubResource("CapsuleShape2D_to1xr")
debug_color = Color(0, 1, 0, 0.0901961)

[node name="death_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_gm4ve")
volume_db = 6.0

[node name="walk_sfx" type="AudioStreamPlayer2D" parent="."]
position = Vector2(0, -2)
stream = SubResource("AudioStreamRandomizer_d36xm")
volume_db = -10.0

[node name="ouch_sfx" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_ht1mq")
volume_db = -5.0

[node name="attack_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_87241")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[connection signal="timeout" from="State Control/EnemyAttack/attack_cooldown" to="State Control/EnemyAttack" method="_on_attack_cooldown_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="State Control/EnemyAttack" method="_on_animation_player_animation_finished"]
